<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context="com.example.camilomartinez.punto3.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.2">

        <EditText
            android:inputType="number"
            android:id="@+id/eBase"
            android:enabled="false"
            android:hint="@string/base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <EditText
            android:inputType="number"
            android:id="@+id/eAltura"
            android:enabled="false"
            android:hint="@string/altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

        <EditText
            android:inputType="number"
            android:id="@+id/eRadio"
            android:enabled="false"
            android:hint="@string/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>
        <EditText
            android:inputType="number"
            android:id="@+id/eLado"
            android:enabled="false"
            android:hint="@string/lado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"/>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioGroup">

            <RadioButton
                android:checked="false"
                android:id="@+id/eCuadrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cuadrado" />

            <RadioButton
                android:checked="false"
                android:id="@+id/eTraiangulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/triangulo"/>

            <RadioButton
                android:checked="false"
                android:id="@+id/eRectangulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rectangulo"/>

            <RadioButton
                android:checked="false"
                android:id="@+id/eCirculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/circulo"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:id="@+id/eCalcular"
            android:layout_alignBottom="@+id/radioGroup"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="0dp"
            android:layout_marginEnd="0dp"
            android:textSize="35sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/eresultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center" />
</LinearLayout>
